--- a/app/views/core_pages/contact.html.haml
+++ b/app/views/core_pages/contact.html.haml
@@ -1,5 +1,6 @@
-%div.map-container
-    %div#map-canvas
-%div
-    %h1.heading.-large
+%div.sign
+    %h1.heading.-grand.no-white-space
         Contact Us
+%section.page-content
+    %div.map-container
+        %div#map-canvas
