--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,10 @@
         = javascript_include_tag 'application'
         = javascript_include_tag 'https://maps.googleapis.com/maps/api/js?sensor=false'
         = csrf_meta_tags
-    %body{ :class => '#{page_body_class}' }
+    %body{ :class => "-linen #{page_body_class}" }
         %div#page-wrapper
             = yield :header if content_for?(:header)
+            = yield :banner if content_for?(:banner)
             %div#flash-container
                 = render partial: 'shared/flash_messages.html.haml'
             = yield :page_content
