--- a/app/assets/stylesheets/general/_global_modifiers.scss
+++ b/app/assets/stylesheets/general/_global_modifiers.scss
@@ -14,6 +14,10 @@
     float: left;
 }
 
+.margin-b1 { margin-bottom: 1em; }
+.margin-b2 { margin-bottom: 2em; }
+.margin-b3 { margin-bottom: 3em; }
+
 .no-white-space {
     margin: 0;
     padding: 0;
