--- a/app/assets/stylesheets/general/definitions/_variables.scss
+++ b/app/assets/stylesheets/general/definitions/_variables.scss
@@ -1,6 +1,7 @@
 // COLORS
 
 $color-deep-sea: #117766;
+$color-free-speech-red: #cc0011;
 $color-gray-nickel: #c3c3bd;
 $color-tundora: #4a4244;
 $color-white: #ffffff;
@@ -9,3 +10,4 @@ $color-white: #ffffff;
 
 $size-container-width: 80em;
 $size-footer-height: 8em;
+$size-footer-padding: 12em;
