--- a/app/assets/stylesheets/general/definitions/_mixins.scss
+++ b/app/assets/stylesheets/general/definitions/_mixins.scss
@@ -8,6 +8,12 @@
     }
 }
 
+@mixin overflow-clear {
+    display: block;
+    overflow: hidden;
+    zoom: 1;
+}
+
 @mixin vertically-center {
     position: relative;
     top: 50%;
