--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -10,7 +10,9 @@
                     %div
                         All rights reserved
                 %td.footer-panel.footer-panel-middle
-                    %div.diamond-circled.margin-auto
+                    %div.centered
+                        %span.heading.-accent.-large
+                            RR
                 %td.footer-panel.footer-panel-right
                     %div
                         15585 68th Ave, Coopersville MI
