--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,10 +1,11 @@
 %header
     %div.header-content.container
         %div.vertically-center.float-left
-            %h1.heading.-accent.-grand.no-whitespace
+            %h1.heading.-accent.-grand.no-white-space
                 River Ridge Farms
         %nav.header-nav
             = link_to 'Home', root_path, :class => 'header-link'
             = link_to 'About Us', about_path, :class => 'header-link'
-            = link_to 'Contact', contact_path, :class => 'header-link'
+            = link_to 'Locations', locations_path, :class => 'header-link'
+            = link_to 'Contact', new_message_path, :class => 'header-link'
             
